<resources>
    <string name="app_name">Pixel Perfect</string>
    <string name="splash_logo">splash_logo</string>
    <string name="file_provider">com.example.pixelperfect.provider</string>
    <string name="Add">Add</string>
    <string name="projects">Projects</string>
    <string name="email_feedback">hussain@hashmac.com</string>
    <string name="directory" translatable="false">/.PixelPerfectTemp/</string>
    <string name="share_txt">Hey view/Share this image</string>
    <string name="share_image_via">Share File via...</string>
    <string name="rating_promote">We are working hard for a better user experience. \nWe\'d greatly appreciate if you can rate us.</string>
    <string name="rating_title_1">Oh, no!</string>
    <string name="rating_title_2">We like you too!</string>
    <string name="rating_text_1">Please leave us some feedback.</string>
    <string name="rating_text_4">Thanks for your feedback.</string>
    <string name="rating_text_5">The best we can get :)</string>
    <string name="feedback">Feed back</string>
    <string name="rating_dialog_feedback_title">Feedback</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="settings">Settings</string>
    <string name="rating_dialog_submit">Submit</string>
    <string name="camera">Camera</string>
    <string name="later">Later</string>
    <string name="email_app_not_installed">Email app not installed</string>
    <string name="share_text">I\'m using amazing Face Beauty! Get the free app at</string>

    <string name="size">Size</string>
    <string name="filter">Filter</string>
    <string name="crop">Crop</string>
    <string name="sticker">Sticker</string>
    <string name="text">Text</string>
    <string name="blur">Blur</string>
    <string name="ratio">Ratio</string>
    <string name="square">Square</string>
    <string name="eraser">Eraser</string>
    <string name="rate_us">Rate us</string>
    <string name="share_with_friends">Share With Friends</string>
    <string name="more_apps_from_us">More Apps from us</string>
    <string name="download_this">Download this awesome app</string>
    <string name="padding">Padding</string>
    <string name="developer_account_id">6744835063682873817</string>
    <string name="hsl">HSL</string>
    <string name="adjust">Adjust</string>
    <string name="brightness">Brightness</string>
    <string name="contrast">Contrast</string>
    <string name="saturation">Saturation</string>
    <string name="hue">Hue</string>
    <string name="sharpen">Sharpen</string>
    <string name="exposure">Exposure</string>
    <string name="overlay">Overlay</string>
</resources>