<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundColor">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/pka"
        android:scaleType="centerCrop"/>


    <ImageView
        android:id="@+id/imageViewSettings"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:backgroundTint="#322C2C2C"
        android:src="@drawable/ic_baseline_settings"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|bottom"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/linear_layout_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:adjustViewBounds="true"
                android:src="@mipmap/ic_launcher" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textStyle="bold"
                android:textSize="25sp"
                android:layout_marginStart="2dp"
                android:shadowColor="@color/white"
                android:shadowDx="2"
                android:shadowRadius="10"
                android:shadowDy="2"
                android:textColor="@color/white"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/relative_layout_edit_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/relativeLayoutEditor"
            android:layout_width="90dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:background="@drawable/background_item"
            android:backgroundTint="#40FFFFFF"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_add" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Add"
                android:textColor="@color/white"
                android:layout_marginTop="7dp"
                android:textSize="14sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/relativeLayoutCamera"
            android:layout_width="90dp"
            android:layout_height="100dp"
            android:background="@drawable/background_item"
            android:backgroundTint="#40FFFFFF"
            android:layout_margin="5dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_camera" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camera"
                android:layout_marginTop="7dp"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/relativeLayoutCreation"
            android:layout_width="90dp"
            android:layout_height="100dp"
            android:background="@drawable/background_item"
            android:backgroundTint="#40FFFFFF"
            android:layout_margin="5dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:padding="4dp"
                android:src="@drawable/ic_photo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/projects"
                android:textColor="@color/white"
                android:layout_marginTop="7dp"
                android:textSize="14sp"
                android:textStyle="bold"/>

        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>