<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/linearLayoutEditorContent"
    android:background="@color/BackgroundCardColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/linearback"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageViewBack"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@drawable/background_unslelected"
            android:backgroundTint="@color/BackgroundColor"
            android:padding="7dp"
            android:src="@drawable/ic_round_arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textStyle="bold"
            android:textSize="16sp"
            android:fontFamily="@font/font"
            android:textColor="@color/white"
            android:layout_centerInParent="true"/>

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_below="@id/linearback"
        android:layout_marginTop="20dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/BackgroundColor">

            <LinearLayout
                android:id="@+id/linearLayoutShare"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:clickable="true"
                android:focusable="true">

                <View
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:background="@color/mainColor"/>

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:padding="9dp"
                    android:src="@drawable/ic_baseline_share"
                    app:tint="@color/mainColor"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/font"
                    android:layout_weight="1"
                    android:text="@string/share_with_friends"
                    android:textColor="@color/white"
                    android:textSize="14sp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/BackgroundColor">

            <LinearLayout
                android:id="@+id/linearLayoutRate"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:clickable="true"
                android:focusable="true">

                <View
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:background="@color/mainColor"/>

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:padding="9dp"
                    android:src="@drawable/ic_round_star_on"
                    app:tint="@color/mainColor"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/font"
                    android:layout_weight="1"
                    android:text="@string/rate_us"
                    android:textColor="@color/white"
                    android:textSize="14sp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/BackgroundColor">

            <LinearLayout
                android:id="@+id/linearLayoutApps"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:clickable="true"
                android:focusable="true">

                <View
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:background="@color/mainColor"/>

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:padding="9dp"
                    android:src="@drawable/ic_baseline_apps"
                    app:tint="@color/mainColor"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/font"
                    android:layout_weight="1"
                    android:text="@string/more_apps_from_us"
                    android:textColor="@color/white"
                    android:textSize="14sp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/BackgroundColor">

            <LinearLayout
                android:id="@+id/linearLayoutFeedback"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:clickable="true"
                android:focusable="true">

                <View
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:background="@color/mainColor"/>

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:padding="10dp"
                    android:src="@drawable/ic_baseline_feedback"
                    app:tint="@color/mainColor"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/font"
                    android:layout_weight="1"
                    android:text="@string/feedback"
                    android:textColor="@color/white"
                    android:textSize="14sp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/BackgroundColor">

            <LinearLayout
                android:id="@+id/linearLayoutPrivacy"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:clickable="true"
                android:focusable="true">

                <View
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:background="@color/mainColor"/>

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:padding="9dp"
                    android:src="@drawable/ic_baseline_privacy"
                    app:tint="@color/mainColor"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/font"
                    android:layout_weight="1"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/white"
                    android:textSize="14sp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</RelativeLayout>