<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutDialogShow"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_margin="10dp">

    <com.quarkworks.roundedframelayout.RoundedFrameLayout
        android:id="@+id/refresh_button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cornerRadiusTopLeft="15dp"
        app:cornerRadiusTopRight="15dp"
        app:cornerRadiusBottomLeft="15dp"
        app:cornerRadiusBottomRight="15dp"
        app:clippedBackgroundColor="@color/transparent"
        app:borderColor="@color/transparent"
        app:softBorderColor="@color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/BackgroundColor"
            android:paddingBottom="15dp">

            <FrameLayout
                android:id="@+id/animation"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@color/mainColor"
                app:layout_constraintTop_toTopOf="parent">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/lottie_animation_view"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:lottie_rawRes="@raw/five_star_rating"/>

            </FrameLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                app:layout_constraintTop_toBottomOf="@id/animation">

                <TextView
                    android:id="@+id/textViewRateTitle"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/rate_us"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/textViewRate"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rating_promote"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewRateTitle"
                    app:layout_constraintBottom_toTopOf="@+id/linear_layout_RatingBar"/>

                <LinearLayout
                    android:id="@+id/linear_layout_RatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewRate"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayoutGet">

                    <ImageView
                        android:id="@+id/image_view_star_1"
                        android:layout_width="46dp"
                        android:layout_height="match_parent"
                        android:padding="2dp"
                        android:src="@drawable/ic_round_star" />

                    <ImageView
                        android:id="@+id/image_view_star_2"
                        android:layout_width="46dp"
                        android:layout_height="match_parent"
                        android:padding="2dp"
                        android:src="@drawable/ic_round_star" />

                    <ImageView
                        android:id="@+id/image_view_star_3"
                        android:layout_width="46dp"
                        android:layout_height="match_parent"
                        android:padding="2dp"
                        android:src="@drawable/ic_round_star" />

                    <ImageView
                        android:id="@+id/image_view_star_4"
                        android:layout_width="46dp"
                        android:layout_height="match_parent"
                        android:padding="2dp"
                        android:src="@drawable/ic_round_star" />

                    <ImageView
                        android:id="@+id/image_view_star_5"
                        android:layout_width="46dp"
                        android:layout_height="match_parent"
                        android:padding="2dp"
                        android:src="@drawable/ic_round_star" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutGet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center|bottom"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linear_layout_RatingBar"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <TextView
                        android:textSize="14sp"
                        android:textColor="@color/mainColor"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rating_text_5" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textViewLater"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:layout_marginTop="15dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/background_unslelected"
                android:gravity="center"
                android:text="@string/later"
                android:textSize="15sp"
                android:textColor="@color/mainColor"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintDesc"/>

            <TextView
                android:id="@+id/textViewSubmit"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/background_selected"
                android:gravity="center"
                android:text="@string/rating_dialog_submit"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintTop_toBottomOf="@+id/constraintDesc"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.quarkworks.roundedframelayout.RoundedFrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>